# Todo-List-Api

./: .env  .gitignore  Cargo.toml  README.md  diesel.toml  lists.db  rustfmt.toml
additional_resources/: To-Do List App - Class Diagram.drawio
additional_resources/ide_configs/vscode/: settings.json
api/: schema.graphql
migrations/2020-10-12-170953_create_lists_table/: down.sql  up.sql
migrations/2020-10-12-171009_create_tags_table/: down.sql  up.sql
migrations/2020-10-12-171015_create_creation_information_table/: down.sql  up.sql
migrations/2020-10-12-171754_create_users_table/: up.sql
migrations/2020-10-14-015711_create_tasks_table/: down.sql  up.sql
src/: api.rs  main.rs
src/api/: constants.rs  context.rs  db.rs  endpoints.rs  errors.rs  graphql.rs  models.rs  schema.rs  services.rs  validators.rs
src/api/endpoints/: auth_endpoints.rs  graphql_endpoints.rs
src/api/errors/: validation_error.rs
src/api/models/: creation_information.rs  database.rs  graphql.rs  list.rs  tag.rs  task.rs  user.rs  utilities.rs
src/api/models/database/: creation_information_row.rs  list_row.rs  new_creation_information_row.rs  new_list_row.rs  new_tag_row.rs  new_task_row.rs  new_user_row.rs  tag_row.rs  task_row.rs  user_row.rs
src/api/models/graphql/: add_task_input.rs  create_list_input.rs  create_tag_input.rs  create_task_input.rs  create_user_input.rs  creation_information_input.rs  update_creation_information_input.rs  (+1 more)
src/api/services/: creation_information_service.rs  list_service.rs  tag_service.rs  task_service.rs  user_service.rs  utilities.rs
