[package]
name = "lists_api"
version = "0.1.0"
authors = ["umbreon222 <umbreon222@gmail.com>"]
edition = "2018"

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
diesel = { version = "1.4.3", features = ["sqlite", "r2d2"] }
dotenv = "^0.15.0"
env_logger = "0.7.1"
juniper = "0.14.2"
r2d2 = "0.8.8"
serde_json = "1.0.44"
rust-crypto = "^0.2.36"
uuid = { version = "^0.8.1", features = ["serde", "v4"] }
regex = "1"
chrono = "^0.4"
